--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
         </section>
     </Div>
     <main>
+        <div class="party-side">
+            <div >
+            <ul class="Party"><h1 class="party-title">Welcome to midnight party</h1>
+            <h3><button class="party-btn">join now</button></h3></ul> 
+            <img class="group-70" src="resources/Group 70.png" alt="">
+            </div>
+        </div>
 
     </main>
     
