--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,33 +8,72 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <header class="banner">
-    <section><div>
-        <img class="banner-image" src="resources/Banner Image.png" alt=""></div>
-    <div class="ban">
-    <h1 class="banner-greeting">65% OFF</h1>
-    <H4 class="banner-tittle">OUR HOLIDAY DEALS ARE BETTER</H4>
-    <h3 class="banner-size">ALL CATEGORIES</h3>
-</div></section>
+    <section>
+        <div>
+            <img class="banner-image" src="resources/Banner Image.png" alt="">
+        </div>
+        <div class="ban">
+            <h1 class="banner-greeting">65% OFF</h1>
+            <H4 class="banner-tittle">OUR HOLIDAY DEALS ARE BETTER</H4>
+            <h3 class="banner-size">ALL CATEGORIES</h3>
+        </div>
+    </section>
 </header>
+
 <body>
     <section>
-    <Div class="sale">
-      <p><h3 class="new-years">happy new year</H3>
-        <h1 class="categories">New Year Party 2024</h1><h1 class="categories">Celebration</h1>
-        <section>
-            <img class="newyear-image" src="resources/New Year Photo.png" alt=""></p>
-        </section>
+        <Div class="sale">
+            <p>
+            <h3 class="new-years">happy new year</H3>
+            <h1 class="categories">New Year Party 2023</h1>
+            <h1 class="categories">Celebration</h1>
+            <section>
+        </div>
+        <div><img class="newyear-image" src="resources/New Year Photo.png" alt=""></p>
+    </section>
     </Div>
     <main>
         <div class="party-side">
-            <div >
-            <ul class="Party"><h1 class="party-title">Welcome to midnight party</h1>
-            <h3><button class="party-btn">join now</button></h3></ul> 
-            <img class="group-70" src="resources/Group 70.png" alt="">
+            <div>
+                <ul class="Party">
+                    <h1 class="party-title">Welcome to midnight party</h1>
+                    <h3><button class="party-btn">join now</button></h3>
+                </ul>
+                <img class="group-70" src="resources/Group 70.png" alt="">
             </div>
         </div>
-
+        <section>
+            <div class="Place">
+                <p> <span>Place:</span> New Park Hotel</p>
+                <p><span>Date:</span>31 December Night 2023</p>
+                <p><span>Time:</span> Evening 7.30 pm to 12.30 am</p>
+                <p><button class="place-btn">Join Now</button></p>
+            </div>
+        </section>
+        <section>
+            <div class="shopping">
+                <p class="gift">THE BEST GIFTS</p>
+                <p class="port">Our Awesome Portfolio</p>
+            </div>
+           <div class="shopping-pic">
+            <ul class="first-pic">
+                <li><img class="rec-3" src="resources/Rectangle 3.png" alt=""></li>
+                <li> <img class="rec-6" src="resources/Rectangle 6.png" alt=""></li>
+            </ul>
+            <ul class="second-pic">
+                <li> <img class="rec-4" src="resources/Rectangle 4.png" alt=""> </li>
+                <li> <img class="rec-7" src="resources/Rectangle 7.png" alt=""> </li>
+            </ul>
+            <ul class="third-pic">
+                <li><img class="rec-5" src="resources/Rectangle 5.png" alt=""></li>
+                <li> <img class="rec-8" src="resources/Rectangle 8.png" alt=""> </li>
+            </ul>
+            </div>
+        </section>
+        <section>
+            <p><img class="rec-8" src="resources/Rectangle 8.png" alt=""> </p>
+        </section>
     </main>
-    
 </body>
+
 </html>
