--- a/index.html
+++ b/index.html
@@ -55,25 +55,44 @@
                 <p class="gift">THE BEST GIFTS</p>
                 <p class="port">Our Awesome Portfolio</p>
             </div>
-           <div class="shopping-pic">
-            <ul class="first-pic">
-                <li><img class="rec-3" src="resources/Rectangle 3.png" alt=""></li>
-                <li> <img class="rec-6" src="resources/Rectangle 6.png" alt=""></li>
-            </ul>
-            <ul class="second-pic">
-                <li> <img class="rec-4" src="resources/Rectangle 4.png" alt=""> </li>
-                <li> <img class="rec-7" src="resources/Rectangle 7.png" alt=""> </li>
-            </ul>
-            <ul class="third-pic">
-                <li><img class="rec-5" src="resources/Rectangle 5.png" alt=""></li>
-                <li> <img class="rec-8" src="resources/Rectangle 8.png" alt=""> </li>
-            </ul>
+            <div class="shopping-pic">
+                <ul class="first-pic">
+                    <li><img class="rec-3" src="resources/Rectangle 3.png" alt=""></li>
+                    <li> <img class="rec-6" src="resources/Rectangle 6.png" alt=""></li>
+                </ul>
+                <ul class="second-pic">
+                    <li> <img class="rec-4" src="resources/Rectangle 4.png" alt=""> </li>
+                    <li> <img class="rec-7" src="resources/Rectangle 7.png" alt=""> </li>
+                </ul>
+                <ul class="third-pic">
+                    <li><img class="rec-5" src="resources/Rectangle 5.png" alt=""></li>
+                    <li> <img class="rec-8" src="resources/Rectangle 8.png" alt=""> </li>
+                </ul>
             </div>
         </section>
         <section>
-            <p><img class="rec-8" src="resources/Rectangle 8.png" alt=""> </p>
+            <div class="subcrib">
+                <p><img class="grp-61" src="resources/Group 61.png" alt=""></p>
+                <p class="sub-sec">Subscribe Newsletter</p>
+                <P class="sub-secs"><input id="name" placeholder="name"><button class="sub-btn">Subscribe</button>
+                </P>
+            </div>
         </section>
     </main>
 </body>
+<footer>
+    <section>
+      <div class="footer">
+        <li class="footer-title"><p>44, Big Building Roosevelt Street</p>
+          <p> Beach Gardens Florida 33410</p></li>
+          <li class="footer-image"><img class="Facebook" src="resources/Facebook.png" alt="">
+            <img class="insta" src="resources/Instagram.png" alt="">
+            <img class="twit" src="resources/Twitter.png" alt="">
+            <img class="linke" src="resources/Linkedin.png" alt="">
+          </li>
+        </div>
+
+    </section>
+</footer>
 
 </html>
